--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 header {
-    background: url("/media/principal2.jpg");
+    background: url("media/principal2.jpg");
     background-size: cover;
     background-position: center;
     min-height: 1000px;
