--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 header {
-    background: url("media/principal.jpg");
+    background: url(media/nature.jpg);
     background-size: cover;
     background-position: center;
     min-height: 1000px;
