--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-header {
+.div-header {
     background: url('./media/principal2.jpg');
     background-size: cover;
     background-position: center;
